Fix alignment

--- a/src/style/modules/_livekeynotes.scss
+++ b/src/style/modules/_livekeynotes.scss
@@ -342,3 +342,10 @@ h3.small-title {
 .project-logo-inner {
   width: 65%;
 }
+
+.inner-text {
+  margin: 0 auto;
+  text-align: center;
+  width: 80%;
+  line-height: 27px;
+}
